--- a/.env
+++ b/.env
@@ -1,1 +1,15 @@
+NAME=SysSolutions
 
+PREFIX=#
+
+MODS=51945463812
+
+PORT=3000
+
+WRITE_SONIC=
+
+BG_API_KEY=vtZjSp37rg6JQ82T39HmrHvQ
+
+SESSION=
+
+URL=mongodb+srv://Butcher:Butcher@butcher.uclszzd.mongodb.net/?retryWrites=true&w=majority
